imports cleanup, formatting, Server sending